# snake-3d

./: Cargo.toml  README.md
shaders/: background.glsl  image.glsl  shaded.glsl  shadow.glsl
src/: load.rs  main.rs  snake.rs
